# Vibe-Coding-Apps

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  OPTIMIZATION-PLAN.md  README.md  SECURITY.md  docker-compose.yml  jest.config.js  jest.setup.js  package.json  playwright.config.ts  pnpm-workspace.yaml  pyproject.toml  pytest.ini  tsconfig.base.json  turbo.json  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr-labeler.yml  release.yml
.husky/: commit-msg  pre-commit
ai-ml-projects/: README.md
ai-ml-projects/chatbots/: .env.example  README.md  app.py  chatbot.py  config.py  example_basic.py  requirements.txt  utils.py
ai-ml-projects/data-analysis/: ENHANCEMENT_SUMMARY.md  README.md  ai_assistant.py  analyzer.py  app.py  automl.py  feature_engineering.py  model_explainer.py  predictor.py  requirements.txt  time_series.py  visualizer.py
ai-ml-projects/image-processing/: EXAMPLES_INDEX.md  README.md  api.py  app.py  classifier.py  detector.py  processor.py  requirements.txt  test_all.py  train.py
ai-ml-projects/nlp/: README.md  app.py  emotion_detector.py  keyword_extractor.py  language_detector.py  qa_system.py  requirements.txt  sentiment_analyzer.py  text_classifier.py  text_similarity.py  zero_shot_classifier.py
apis-backend/: EXAMPLES_ADDED.md  README.md
apis-backend/graphql/: IMPLEMENTATION_SUMMARY.md  README.md
apis-backend/microservices/: IMPROVEMENTS.md  README.md
apis-backend/rest-api/: ENHANCEMENTS.md  README.md
apis-backend/serverless/: README.md
blockchain-apps/: README.md
blockchain-apps/defi-projects/: README.md
blockchain-apps/nft-marketplace/: README.md
blockchain-apps/smart-contracts/: README.md
blockchain-apps/web3-dapps/: README.md
browser-extensions/: README.md
browser-extensions/content-enhancer/: ENHANCEMENT_SUMMARY.md  README.md  manifest.json  package.json
browser-extensions/dev-tools/: .gitignore  README.md  manifest.json  package.json
browser-extensions/privacy-guardian/: .eslintrc.json  IMPROVEMENTS.md  README.md  SUBPROJECT_README.md  manifest.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
browser-extensions/productivity-tools/: .gitignore  AI-ENHANCEMENTS-SUMMARY.md  README.md  manifest.json  package.json
browser-extensions/social-media-tools/: README.md  manifest.json  package.json
desktop-apps/: README.md
desktop-apps/electron/: IMPROVEMENTS.md  README.md
desktop-apps/native/: README.md
desktop-apps/tauri/: README.md
desktop-apps/tauri/color-picker/src-tauri/: Cargo.toml  tauri.conf.json
desktop-apps/tauri/color-picker/src-tauri/src/: main.rs
desktop-apps/tauri/quick-notes/src-tauri/: Cargo.toml  tauri.conf.json
desktop-apps/tauri/quick-notes/src-tauri/src/: main.rs
enterprise-apps/: README.md
enterprise-apps/business-intelligence/: ENHANCEMENTS_SUMMARY.md  README.md
enterprise-apps/collaboration-tools/: README.md  example.md
enterprise-apps/crm-systems/: README.md  example_crm_workflow.py
enterprise-apps/erp-systems/: IMPROVEMENTS.md  README.md  example_erp_workflow.py
enterprise-apps/finance-accounting/: IMPROVEMENTS.md  README.md  example_finance_workflow.py
enterprise-apps/hr-management/: ENHANCEMENTS.md  README.md  example.md
enterprise-apps/project-management/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  docker-run.sh  example_pm_workflow.py  integrated_example.py
enterprise-apps/supply-chain/: README.md  docker-compose.yml  example_supply_chain_workflow.py
games/: README.md
games/desktop-games/: AI_ENHANCEMENTS_SUMMARY.md  CHANGELOG.md  README.md
games/game-engines/: AI-TOOLS-GUIDE.md  README.md
games/mobile-games/: ENHANCEMENTS.md  README.md
games/web-games/: ENHANCEMENTS.md  README.md
hardware-design/: AI_MODELS.md  OPENSOURCE_TOOLS.md  README.md
hardware-design/ai-pcb-layout/: .gitignore  ENHANCEMENT_SUMMARY.md  README.md  config_example.yaml  requirements.txt
hardware-design/circuit-optimizer/: .gitignore  ENHANCEMENT_SUMMARY.md  README.md  README_ENHANCED.md  requirements.txt
hardware-design/component-placement/: .gitignore  README.md  requirements.txt
hardware-design/eda-automation/: .gitignore  COMPLETION_SUMMARY.md  ENHANCEMENTS.md  README.md  cli.py  requirements.txt
hardware-design/schematic-generator/: .gitignore  ENHANCEMENTS.md  README.md  requirements.txt
mobile-apps/: README.md
mobile-apps/android-native/: AI_ENHANCEMENTS_SUMMARY.md  README.md
mobile-apps/flutter/: ENHANCEMENTS_SUMMARY.md  README.md
mobile-apps/ios-native/: README.md
mobile-apps/react-native/: PERFORMANCE.md  README.md
multimedia-apps/: AI-INTEGRATION-GUIDE.md  README.md
multimedia-apps/animation-generator/: .gitignore  README.md  package.json
multimedia-apps/audio-editor/: AI-FEATURES.md  README.md  package.json
multimedia-apps/audio-recorder/: AI-FEATURES.md  README.md  package.json
multimedia-apps/gif-maker/: AI-FEATURES.md  README.md  package.json
multimedia-apps/image-converter/: AI-FEATURES.md  README.md  package.json
multimedia-apps/image-viewer/: AI-FEATURES.md  README.md  package.json
multimedia-apps/live-streaming/: AI-FEATURES.md  README.md  package.json
multimedia-apps/music-generator/: AI-ENHANCEMENTS.md  README.md  package.json
multimedia-apps/music-player/: AI-FEATURES.md  README.md  package.json
multimedia-apps/screenshot-tool/: AI-FEATURES.md  README.md  (+1 more)
system-firmware/: CLASS-REFERENCE-GUIDE.md  DETAILED-STRUCTURE-REPORT.md  README-ANALYSIS.md  README.md
system-firmware/rtos/freertos/task-management/: CMakeLists.txt  Makefile  README.md  build.sh
system-firmware/rtos/freertos/task-management/cmake/: arm-none-eabi-gcc.cmake
system-firmware/rtos/freertos/task-management/include/: FreeRTOSConfig.h  config.h  tasks.h
system-firmware/rtos/freertos/task-management/src/: main.c
tools-utilities/: .gitignore  README.md
web-apps/: README.md
(+2773 files in other folders)
